--- a/GmailGet/GMailGet/GMailGet/MailGet.csproj
+++ b/GmailGet/GMailGet/GMailGet/MailGet.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F6FAFC61-F351-4C78-B35A-857B8B5637E2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GMailGet</RootNamespace>
-    <AssemblyName>GMailGet</AssemblyName>
+    <RootNamespace>MailGet</RootNamespace>
+    <AssemblyName>MailGet</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
